BcodeParser.py
# Generated from Bcode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BcodeParser ( Parser ):

    grammarFileName = "Bcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'>'", "'<'", "'='", "'('", "')'", "'{'", "'}'", "';'", 
                     "','", "'returns'", "'return'", "'cprint'", "<INVALID>", 
                     "'NONE'", "<INVALID>", "'int'", "'bool'", "'none'", 
                     "'string'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ITEM_COMMENT", "ITEM_WHITESPACE", 
                      "ITEM_NEWLINE", "LITERAL_STRING", "OPERATOR_ADD", 
                      "OPERATOR_SUBTR", "OPERATOR_MULT", "OPERATOR_DIV", 
                      "OPERATOR_GTHAN", "OPERATOR_LTHAN", "OPERATOR_ASSIGN", 
                      "SYMBOL_OPENPAR", "SYMBOL_CLOSEPAR", "SYMBOL_OPENBRACE", 
                      "SYMBOL_CLOSEBRACE", "SYMBOL_SEMICOLON", "SYMBOL_COMMA", 
                      "STRUCTURE_RETURNS", "STRUCTURE_RETURN", "FUNCTION_CPRINT", 
                      "LITERAL_BOOL", "LITERAL_NONE", "ITEM_VARNAME", "TYPE_INTEGER", 
                      "TYPE_BOOL", "TYPE_NONE", "TYPE_STRING", "LITERAL_INTEGER" ]

    RULE_opr_arith = 0
    RULE_opr_cmp = 1
    RULE_sym = 2
    RULE_str = 3
    RULE_lit = 4
    RULE_itm = 5
    RULE_typ = 6
    RULE_expr_arith = 7
    RULE_expr_cmp = 8
    RULE_var_def = 9
    RULE_var_asg = 10
    RULE_var_reasg = 11
    RULE_fnc_cprint = 12
    RULE_stm_return = 13
    RULE_statement = 14
    RULE_program = 15
    RULE_start_ = 16

    ruleNames =  [ "opr_arith", "opr_cmp", "sym", "str", "lit", "itm", "typ", 
                   "expr_arith", "expr_cmp", "var_def", "var_asg", "var_reasg", 
                   "fnc_cprint", "stm_return", "statement", "program", "start_" ]

    EOF = Token.EOF
    T__0=1
    ITEM_COMMENT=2
    ITEM_WHITESPACE=3
    ITEM_NEWLINE=4
    LITERAL_STRING=5
    OPERATOR_ADD=6
    OPERATOR_SUBTR=7
    OPERATOR_MULT=8
    OPERATOR_DIV=9
    OPERATOR_GTHAN=10
    OPERATOR_LTHAN=11
    OPERATOR_ASSIGN=12
    SYMBOL_OPENPAR=13
    SYMBOL_CLOSEPAR=14
    SYMBOL_OPENBRACE=15
    SYMBOL_CLOSEBRACE=16
    SYMBOL_SEMICOLON=17
    SYMBOL_COMMA=18
    STRUCTURE_RETURNS=19
    STRUCTURE_RETURN=20
    FUNCTION_CPRINT=21
    LITERAL_BOOL=22
    LITERAL_NONE=23
    ITEM_VARNAME=24
    TYPE_INTEGER=25
    TYPE_BOOL=26
    TYPE_NONE=27
    TYPE_STRING=28
    LITERAL_INTEGER=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Opr_arithContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATOR_ADD(self):
            return self.getToken(BcodeParser.OPERATOR_ADD, 0)

        def OPERATOR_SUBTR(self):
            return self.getToken(BcodeParser.OPERATOR_SUBTR, 0)

        def OPERATOR_MULT(self):
            return self.getToken(BcodeParser.OPERATOR_MULT, 0)

        def OPERATOR_DIV(self):
            return self.getToken(BcodeParser.OPERATOR_DIV, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_opr_arith

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpr_arith" ):
                listener.enterOpr_arith(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpr_arith" ):
                listener.exitOpr_arith(self)




    def opr_arith(self):

        localctx = BcodeParser.Opr_arithContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_opr_arith)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opr_cmpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATOR_GTHAN(self):
            return self.getToken(BcodeParser.OPERATOR_GTHAN, 0)

        def OPERATOR_LTHAN(self):
            return self.getToken(BcodeParser.OPERATOR_LTHAN, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_opr_cmp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpr_cmp" ):
                listener.enterOpr_cmp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpr_cmp" ):
                listener.exitOpr_cmp(self)




    def opr_cmp(self):

        localctx = BcodeParser.Opr_cmpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_opr_cmp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SymContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL_OPENPAR(self):
            return self.getToken(BcodeParser.SYMBOL_OPENPAR, 0)

        def SYMBOL_CLOSEPAR(self):
            return self.getToken(BcodeParser.SYMBOL_CLOSEPAR, 0)

        def SYMBOL_OPENBRACE(self):
            return self.getToken(BcodeParser.SYMBOL_OPENBRACE, 0)

        def SYMBOL_CLOSEBRACE(self):
            return self.getToken(BcodeParser.SYMBOL_CLOSEBRACE, 0)

        def SYMBOL_SEMICOLON(self):
            return self.getToken(BcodeParser.SYMBOL_SEMICOLON, 0)

        def SYMBOL_COMMA(self):
            return self.getToken(BcodeParser.SYMBOL_COMMA, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_sym

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSym" ):
                listener.enterSym(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSym" ):
                listener.exitSym(self)




    def sym(self):

        localctx = BcodeParser.SymContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sym)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCTURE_RETURNS(self):
            return self.getToken(BcodeParser.STRUCTURE_RETURNS, 0)

        def STRUCTURE_RETURN(self):
            return self.getToken(BcodeParser.STRUCTURE_RETURN, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_str

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr" ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr" ):
                listener.exitStr(self)




    def str_(self):

        localctx = BcodeParser.StrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_str)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            _la = self._input.LA(1)
            if not(_la==19 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL_BOOL(self):
            return self.getToken(BcodeParser.LITERAL_BOOL, 0)

        def LITERAL_NONE(self):
            return self.getToken(BcodeParser.LITERAL_NONE, 0)

        def LITERAL_STRING(self):
            return self.getToken(BcodeParser.LITERAL_STRING, 0)

        def LITERAL_INTEGER(self):
            return self.getToken(BcodeParser.LITERAL_INTEGER, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_lit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLit" ):
                listener.enterLit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLit" ):
                listener.exitLit(self)




    def lit(self):

        localctx = BcodeParser.LitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 549453856) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM_VARNAME(self):
            return self.getToken(BcodeParser.ITEM_VARNAME, 0)

        def ITEM_COMMENT(self):
            return self.getToken(BcodeParser.ITEM_COMMENT, 0)

        def ITEM_WHITESPACE(self):
            return self.getToken(BcodeParser.ITEM_WHITESPACE, 0)

        def ITEM_NEWLINE(self):
            return self.getToken(BcodeParser.ITEM_NEWLINE, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_itm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItm" ):
                listener.enterItm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItm" ):
                listener.exitItm(self)




    def itm(self):

        localctx = BcodeParser.ItmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_itm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16777244) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_INTEGER(self):
            return self.getToken(BcodeParser.TYPE_INTEGER, 0)

        def TYPE_BOOL(self):
            return self.getToken(BcodeParser.TYPE_BOOL, 0)

        def TYPE_NONE(self):
            return self.getToken(BcodeParser.TYPE_NONE, 0)

        def TYPE_STRING(self):
            return self.getToken(BcodeParser.TYPE_STRING, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_typ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyp" ):
                listener.enterTyp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyp" ):
                listener.exitTyp(self)




    def typ(self):

        localctx = BcodeParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_arithContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BcodeParser.LitContext)
            else:
                return self.getTypedRuleContext(BcodeParser.LitContext,i)


        def ITEM_VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(BcodeParser.ITEM_VARNAME)
            else:
                return self.getToken(BcodeParser.ITEM_VARNAME, i)

        def opr_arith(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BcodeParser.Opr_arithContext)
            else:
                return self.getTypedRuleContext(BcodeParser.Opr_arithContext,i)


        def getRuleIndex(self):
            return BcodeParser.RULE_expr_arith

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_arith" ):
                listener.enterExpr_arith(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_arith" ):
                listener.exitExpr_arith(self)




    def expr_arith(self):

        localctx = BcodeParser.Expr_arithContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr_arith)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 22, 23, 29]:
                self.state = 48
                self.lit()
                pass
            elif token in [24]:
                self.state = 49
                self.match(BcodeParser.ITEM_VARNAME)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.opr_arith()
                self.state = 55
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5, 22, 23, 29]:
                    self.state = 53
                    self.lit()
                    pass
                elif token in [24]:
                    self.state = 54
                    self.match(BcodeParser.ITEM_VARNAME)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_cmpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opr_cmp(self):
            return self.getTypedRuleContext(BcodeParser.Opr_cmpContext,0)


        def lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BcodeParser.LitContext)
            else:
                return self.getTypedRuleContext(BcodeParser.LitContext,i)


        def ITEM_VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(BcodeParser.ITEM_VARNAME)
            else:
                return self.getToken(BcodeParser.ITEM_VARNAME, i)

        def getRuleIndex(self):
            return BcodeParser.RULE_expr_cmp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_cmp" ):
                listener.enterExpr_cmp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_cmp" ):
                listener.exitExpr_cmp(self)




    def expr_cmp(self):

        localctx = BcodeParser.Expr_cmpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr_cmp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 22, 23, 29]:
                self.state = 61
                self.lit()
                pass
            elif token in [24]:
                self.state = 62
                self.match(BcodeParser.ITEM_VARNAME)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 65
            self.opr_cmp()
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 22, 23, 29]:
                self.state = 66
                self.lit()
                pass
            elif token in [24]:
                self.state = 67
                self.match(BcodeParser.ITEM_VARNAME)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BcodeParser.TypContext,0)


        def ITEM_VARNAME(self):
            return self.getToken(BcodeParser.ITEM_VARNAME, 0)

        def getRuleIndex(self):
            return BcodeParser.RULE_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_def" ):
                listener.enterVar_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_def" ):
                listener.exitVar_def(self)




    def var_def(self):

        localctx = BcodeParser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.typ()
            self.state = 71
            self.match(BcodeParser.ITEM_VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_asgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_def(self):
            return self.getTypedRuleContext(BcodeParser.Var_defContext,0)


        def OPERATOR_ASSIGN(self):
            return self.getToken(BcodeParser.OPERATOR_ASSIGN, 0)

        def lit(self):
            return self.getTypedRuleContext(BcodeParser.LitContext,0)


        def SYMBOL_OPENPAR(self):
            return self.getToken(BcodeParser.SYMBOL_OPENPAR, 0)

        def SYMBOL_CLOSEPAR(self):
            return self.getToken(BcodeParser.SYMBOL_CLOSEPAR, 0)

        def expr_arith(self):
            return self.getTypedRuleContext(BcodeParser.Expr_arithContext,0)


        def expr_cmp(self):
            return self.getTypedRuleContext(BcodeParser.Expr_cmpContext,0)


        def getRuleIndex(self):
            return BcodeParser.RULE_var_asg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_asg" ):
                listener.enterVar_asg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_asg" ):
                listener.exitVar_asg(self)




    def var_asg(self):

        localctx = BcodeParser.Var_asgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_asg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.var_def()
            self.state = 74
            self.match(BcodeParser.OPERATOR_ASSIGN)
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 75
                self.lit()
                pass

            elif la_ == 2:
                self.state = 76
                self.match(BcodeParser.SYMBOL_OPENPAR)
                self.state = 79
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 77
                    self.expr_arith()
                    pass

                elif la_ == 2:
                    self.state = 78
                    self.expr_cmp()
                    pass


                self.state = 81
                self.match(BcodeParser.SYMBOL_CLOSEPAR)
                pass

            elif la_ == 3:
                self.state = 83
                self.expr_arith()
                pass

            elif la_ == 4:
                self.state = 84
                self.expr_cmp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_reasgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM_VARNAME(self):
            return self.getToken(BcodeParser.ITEM_VARNAME, 0)

        def OPERATOR_ASSIGN(self):
            return self.getToken(BcodeParser.OPERATOR_ASSIGN, 0)

        def lit(self):
            return self.getTypedRuleContext(BcodeParser.LitContext,0)


        def SYMBOL_OPENPAR(self):
            return self.getToken(BcodeParser.SYMBOL_OPENPAR, 0)

        def SYMBOL_CLOSEPAR(self):
            return self.getToken(BcodeParser.SYMBOL_CLOSEPAR, 0)

        def expr_arith(self):
            return self.getTypedRuleContext(BcodeParser.Expr_arithContext,0)


        def expr_cmp(self):
            return self.getTypedRuleContext(BcodeParser.Expr_cmpContext,0)


        def getRuleIndex(self):
            return BcodeParser.RULE_var_reasg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_reasg" ):
                listener.enterVar_reasg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_reasg" ):
                listener.exitVar_reasg(self)




    def var_reasg(self):

        localctx = BcodeParser.Var_reasgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_reasg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BcodeParser.ITEM_VARNAME)
            self.state = 88
            self.match(BcodeParser.OPERATOR_ASSIGN)
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 89
                self.lit()
                pass

            elif la_ == 2:
                self.state = 90
                self.match(BcodeParser.SYMBOL_OPENPAR)
                self.state = 93
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 91
                    self.expr_arith()
                    pass

                elif la_ == 2:
                    self.state = 92
                    self.expr_cmp()
                    pass


                self.state = 95
                self.match(BcodeParser.SYMBOL_CLOSEPAR)
                pass

            elif la_ == 3:
                self.state = 97
                self.expr_arith()
                pass

            elif la_ == 4:
                self.state = 98
                self.expr_cmp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fnc_cprintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_CPRINT(self):
            return self.getToken(BcodeParser.FUNCTION_CPRINT, 0)

        def SYMBOL_OPENPAR(self):
            return self.getToken(BcodeParser.SYMBOL_OPENPAR, 0)

        def SYMBOL_CLOSEPAR(self):
            return self.getToken(BcodeParser.SYMBOL_CLOSEPAR, 0)

        def lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BcodeParser.LitContext)
            else:
                return self.getTypedRuleContext(BcodeParser.LitContext,i)


        def ITEM_VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(BcodeParser.ITEM_VARNAME)
            else:
                return self.getToken(BcodeParser.ITEM_VARNAME, i)

        def getRuleIndex(self):
            return BcodeParser.RULE_fnc_cprint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnc_cprint" ):
                listener.enterFnc_cprint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnc_cprint" ):
                listener.exitFnc_cprint(self)




    def fnc_cprint(self):

        localctx = BcodeParser.Fnc_cprintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_fnc_cprint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BcodeParser.FUNCTION_CPRINT)
            self.state = 102
            self.match(BcodeParser.SYMBOL_OPENPAR)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 566231072) != 0):
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5, 22, 23, 29]:
                    self.state = 103
                    self.lit()
                    pass
                elif token in [24]:
                    self.state = 104
                    self.match(BcodeParser.ITEM_VARNAME)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(BcodeParser.SYMBOL_CLOSEPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stm_returnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCTURE_RETURN(self):
            return self.getToken(BcodeParser.STRUCTURE_RETURN, 0)

        def SYMBOL_SEMICOLON(self):
            return self.getToken(BcodeParser.SYMBOL_SEMICOLON, 0)

        def lit(self):
            return self.getTypedRuleContext(BcodeParser.LitContext,0)


        def ITEM_VARNAME(self):
            return self.getToken(BcodeParser.ITEM_VARNAME, 0)

        def expr_arith(self):
            return self.getTypedRuleContext(BcodeParser.Expr_arithContext,0)


        def expr_cmp(self):
            return self.getTypedRuleContext(BcodeParser.Expr_cmpContext,0)


        def getRuleIndex(self):
            return BcodeParser.RULE_stm_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStm_return" ):
                listener.enterStm_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStm_return" ):
                listener.exitStm_return(self)




    def stm_return(self):
